--- a/index.html
+++ b/index.html
@@ -224,37 +224,36 @@
         </div>
 
         <div class="gallery">
-            <a href="#img1"><img src="IMAGES/CH1.jpg" alt=></a>
-            <a href="#img2"><img src="IMAGES/CH2.jpg" alt=></a>
-            <a href="#img3"><img src="IMAGES/CH3.jpg" alt=></a>
-            <a href="#img4"><img src="IMAGES/CH4.jpg" alt=></a>
-            <a href="#img5"><img src="IMAGES/CH5.jpg" alt=></a>
-            <a href="#img6"><img src="IMAGES/CH6.jpg" alt=></a>
-            <a href="#img7"><img src="IMAGES/CH7.jpg" alt=></a>
+            <a href="#img1"><img src="IMAGES/JJ1.jpg" alt=></a>
+            <a href="#img2"><img src="IMAGES/JJ2.jpg" alt=></a>
+            <a href="#img3"><img src="IMAGES/JJ3.jpg" alt=></a>
+            <a href="#img4"><img src="IMAGES/JJ4.jpg" alt=></a>
+            <a href="#img5"><img src="IMAGES/JJ5.jpg" alt=></a>
+            <a href="#img6"><img src="IMAGES/JJ6.jpg" alt=></a>
             <!-- Πρόσθεσε όσες φωτογραφίες θέλεις -->
         </div>
 
         <!-- Lightbox modals -->
         <div id="img1" class="lightbox">
-            <a href="#"><img src="IMAGES/CH1.jpg" alt="CH1"></a>
+            <a href="#"><img src="IMAGES/JJ1.jpg" alt="JJ1"></a>
         </div>
         <div id="img2" class="lightbox">
-            <a href="#"><img src="IMAGES/CH2.jpg" alt="CH2"></a>
+            <a href="#"><img src="IMAGES/JJ2.jpg" alt="JJ2"></a>
         </div>
         <div id="img3" class="lightbox">
-            <a href="#"><img src="IMAGES/CH3.jpg" alt="CH3"></a>
+            <a href="#"><img src="IMAGES/JJ3.jpg" alt="JJ3"></a>
         </div>
         <div id="img4" class="lightbox">
-            <a href="#"><img src="IMAGES/CH4.jpg" alt="CH4"></a>
+            <a href="#"><img src="IMAGES/JJ4.jpg" alt="JJ4"></a>
         </div>
         <div id="img5" class="lightbox">
-            <a href="#"><img src="IMAGES/CH5.jpg" alt="CH5"></a>
+            <a href="#"><img src="IMAGES/JJ5.jpg" alt="JJ5"></a>
         </div>
         <div id="img6" class="lightbox">
-            <a href="#"><img src="IMAGES/CH6.jpg" alt="CH6"></a>
+            <a href="#"><img src="IMAGES/JJ6.jpg" alt="JJ6"></a>
         </div>
         <div id="img7" class="lightbox">
-            <a href="#"><img src="IMAGES/CH7.jpg" alt="CH7"></a>
+            <a href="#"><img src="IMAGES/JJ7.jpg" alt="JJ7"></a>
         </div>
 
 
