--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <a href="#img3"><img src="IMAGES/JJ3.jpg" alt=></a>
             <a href="#img4"><img src="IMAGES/JJ4.jpg" alt=></a>
             <a href="#img5"><img src="IMAGES/JJ5.jpg" alt=></a>
-            <a href="#img6"><img src="IMAGES/JJ6.jpg" alt=></a>
+            <a href="#img6"><img src="IMAGES/JJ6II.jpg" alt=></a>
             <!-- Πρόσθεσε όσες φωτογραφίες θέλεις -->
         </div>
 
@@ -250,12 +250,8 @@
             <a href="#"><img src="IMAGES/JJ5.jpg" alt="JJ5"></a>
         </div>
         <div id="img6" class="lightbox">
-            <a href="#"><img src="IMAGES/JJ6.jpg" alt="JJ6"></a>
+            <a href="#"><img src="IMAGES/JJ6II.jpg" alt="JJ6"></a>
         </div>
-        <div id="img7" class="lightbox">
-            <a href="#"><img src="IMAGES/JJ7.jpg" alt="JJ7"></a>
-        </div>
-
 
         <div class="info-map-container">
             <div class="store-info">
